<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/inbox"
        android:icon="@drawable/inbox"
        android:title="@string/inbox" />
    <item
        android:id="@+id/notification"
        android:icon="@drawable/notification"
        android:title="@string/notifications" />
    <item
        android:id="@+id/events"
        android:icon="@drawable/event"
        android:title="@string/events" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/profile"
        android:title="@string/profile" />
</menu>